--- a/aws_node/package.json
+++ b/aws_node/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1106.0",
+    "ejs": "^3.1.8",
     "express": "^4.17.3",
     "formidable": "^2.0.1",
     "nodemon": "^2.0.15",
